<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pizza Ordering App</string>
    <string name="action_settings">Settings</string>
    <string name="select_pizza_crust">Select Your Pizza Crust</string>
    <string name="select_pizza_topping">Select Your Topping</string>
    <string name="pizza_size">Select Your Pizza Size</string>
    <string name="hand_crust">Hand Crust</string>
    <string name="natural_crust">Natural Crust</string>
    <string name="pan_crust">Pan Crust</string>
    <string name="stuffed_crust">Stuffed Crust</string>
    <string name="thincrispy_crust">Thin and Crispy Crust</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="noofpizza">No. of Pizza</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="onions">Onions</string>
    <string name="bacon">Bacon</string>
    <string name="sausage">Sausage</string>
    <string name="olives">Black olives</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="grandtotal">Grand Total:</string>
</resources>
