<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.workdemos.pizzaorderingapp.MainActivity2">

    <TextView android:text="@string/noofpizza" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textNoOfPizza"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner android:id="@+id/NumberSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textNoOfPizza"
        android:layout_marginLeft="20dp"
        android:layout_alignBottom="@+id/textNoOfPizza" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_pizza_topping"
        android:layout_below="@+id/textNoOfPizza"
        android:id="@+id/textSelectTopping"
        android:paddingTop="20dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toppingGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textSelectTopping">
        <RadioButton android:id="@+id/pepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pepperoni"
            android:layout_marginTop="20dp"
            android:checked="true" />
        <RadioButton android:id="@+id/olives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:text="@string/olives" />
        <RadioButton android:id="@+id/mushrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:text="@string/mushrooms" />
        <RadioButton android:id="@+id/onions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:text="@string/onions" />
        <RadioButton android:id="@+id/bacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:text="@string/bacon" />
        <RadioButton android:id="@+id/sausage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:text="@string/sausage" />
    </RadioGroup>
    <TextView android:text="@string/subtotal" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textSubtotal"
        android:layout_below="@+id/toppingGroup"
        android:layout_marginTop="30dp"
        android:textColor="#0000ff" />
    <TextView android:text="@string/tax" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textTax"
        android:layout_below="@+id/textSubtotal"
        android:layout_marginTop="10dp"
        android:textColor="#0000ff" />
    <TextView android:text="@string/grandtotal" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textGrandtotal"
        android:layout_below="@+id/textTax"
        android:layout_marginTop="10dp"
        android:textColor="#c80000" />
</RelativeLayout>
